<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/flavor1TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C2185B"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/flavor1ImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:background="#E91E63"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/flavor1EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_drink_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#C2185B" />

            <Button
                android:id="@+id/flavor1Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#E91E63"
                android:text="@string/pour"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/flavor2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00796B"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/flavor2ImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:background="#009688"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/flavor2EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_drink_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#00796B" />

            <Button
                android:id="@+id/flavor2Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#009688"
                android:text="@string/pour"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/flavor3TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#303F9F"
                android:text="3"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/flavor3ImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:background="#3F51B5"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/flavor3EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_drink_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#303F9F" />

            <Button
                android:id="@+id/flavor3Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#3F51B5"
                android:text="@string/pour"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/mysteryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7B1FA2"
                android:text="4"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mysteryImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:background="#9C27B0"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mystery" />

            <EditText
                android:id="@+id/mysteryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:inputType="none"
                android:text="@string/mystery"
                android:textAlignment="center"
                android:textColor="#7B1FA2" />

            <Button
                android:id="@+id/mysteryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#9C27B0"
                android:text="@string/pour"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/mix12Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9100"
            android:text="@string/mix12"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mix23Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00B0FF"
            android:text="@string/mix23"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mix31Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00E676"
            android:text="@string/mix31"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <Switch
        android:id="@+id/largeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:switchPadding="10dp"
        android:text="@string/large"
        android:textColor="#D32F2F"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/emergencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#D32F2F"
        android:padding="20dp"
        android:text="@string/emergency"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>